# workflow_visualizer

./: .gitignore  Cargo.toml  LICENSCE.MIT  README.md  Rust.icls  android_run.sh  app.js  app_bg.wasm  binyaren.sh  engen_log.txt  index.html  output.txt  profile.coz  tailwind.css
android_app/: Cargo.toml
android_app/src/: lib.rs  main.rs
app/: Cargo.toml
app/src/: canvas.rs  color.rs  compute_job.rs  coord.rs  custom_render_attachment.rs  depth_texture.rs  final_text.rs  gpu_bindings.rs  job.rs  lib.rs  main.rs  render_extraction.rs  render_job.rs  renderer.rs  rtext.rs  text.rs  theme.rs  uniform.rs  viewport.rs  visibility.rs  window.rs
app/src/text/: bundle.rs  font.rs  instance.rs  mod.rs  pipeline.rs  render.rs  scale.rs  text.wgsl  vertex.rs  vertex_buffer.rs
app/src/text_refactor/: font.rs  glyph_cache.rs  glyphs.rs  instance.rs  instances.rs  mod.rs  placement.rs  rasterization.rs  rasterization_descriptor.rs  rasterizer.rs  render.rs
app/src/text_step_out/: cache.rs  font.rs  glyph.rs  instance.rs  layout.rs  mod.rs  render.rs  scale.rs  text.wgsl  vertex.rs
application/: Cargo.toml  Trunk.toml  android_run.sh  index.html  web_build.sh
application/android_src/app/: build.gradle
application/src/: controller.rs  main.rs  slots.rs  system.rs  visualizer.rs  web_worker.rs  workflow.rs
engen/: Cargo.toml
engen/src/: app.rs  canvas.rs  coord.rs  icon.rs  instance_coordinator.rs  job.rs  launcher.rs  lib.rs  options.rs  r_instance.rs  render.rs  run.rs  task.rs  theme.rs  viewport.rs  visibility.rs
engen/src/canvas/: mod.rs  options.rs  viewport.rs
engen/src/clean_text/: atlas.rs  attach.rs  cache.rs  coords.rs  difference.rs  extraction.rs  font.rs  glyph.rs  index.rs  mod.rs  place.rs  render_group.rs  renderer.rs  scale.rs  text.rs  text.wgsl  vertex.rs
engen/src/instance/: attribute.rs  cache.rs  indexer.rs  key.rs  mod.rs  write_range.rs
engen/src/r_text/: font.rs  index.rs  mod.rs
engen/src/text/: atlas.rs  attach.rs  cache.rs  changes.rs  component.rs  compute.rs  compute_system.rs  coords.rs  difference.rs  extract.rs  extraction.rs  extractor.rs  font.rs  glyph.rs  grow.rs  index.rs  instance.rs  mod.rs  padded_text.wgsl  pipeline.rs  place.rs  rasterization.rs  render.rs  render_group.rs  render_system.rs  renderer.rs  request.rs  scale.rs  (+3 more)
flat_engen/: Cargo.toml
flat_engen/src/: canvas.rs  compile_wasm.rs  coord.rs  extract.rs  index.template.html  launcher.rs  lib.rs  orientation.rs  render.rs  server.rs  task.rs  theme.rs  uniform.rs  viewport.rs  visibility.rs
focal/: Cargo.toml
focal/src/: canvas.rs  color.rs  instance_coordinator.rs  job.rs  lib.rs  render.rs  run.rs  viewport.rs
icon_editor/: Cargo.toml
icon_editor/src/: engen.rs  main.rs  pad.rs
mise_en_place/: Cargo.toml
mise_en_place/src/: animate.rs  button.rs  clickable.rs  color.rs  extract.rs  focus.rs  gfx.rs  icon.rs  index.template.html  instance_tools.rs  job.rs  key.rs  lib.rs  r_button.rs  render.rs  request.rs  signal.rs  text_input.rs  theme.rs  time.rs  viewport.rs  visibility.rs  wasm_compiler.rs  wasm_server.rs  window.rs
mise_en_place_app/: Cargo.toml
mise_en_place_app/src/: launcher.rs  logic.rs  main.rs  serve.rs  server.rs  server_messaging.rs  stress_test.txt  stress_text.txt
r_app/: Cargo.toml
r_app/src/: android.rs  desktop.rs  job.rs  lib.rs  main.rs  web.rs
visualizer_two/: Cargo.toml
visualizer_two/src/: gfx.rs  job.rs  lib.rs  render.rs  sync.rs  uniform.rs  viewport.rs  window.rs
web_app/: Cargo.toml
web_app/src/: index.template.html  main.rs
website/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json  tailwind.config.js
website/public/: tailwind.css
website/src/: main.rs
website/wv_book/: book.toml
workflow_visualizer/: Cargo.toml  all.html  attr.async_trait.html  enum.JobSyncPoint.html  enum.RenderPhase.html  enum.SyncPoint.html  fn.spawn.html  index.html  sidebar-items.js  struct.Attachment.html  struct.AttributeWrite.html  struct.DeviceContext.html  struct.EnableVisibility.html  struct.EntityName.html  struct.Focus.html  struct.FocusInputListener.html  struct.GfxOptions.html  struct.GfxSurface.html  struct.GpuAttributeBuffer.html  struct.InstanceAttributeManager.html  struct.KeyFactory.html  struct.Layer.html  struct.NullBit.html  struct.RawPosition.html  struct.Request.html  struct.Runner.html  struct.ScaleFactor.html  struct.Section.html  struct.TextGridLocation.html  struct.TextGridPlacement.html  struct.TextLetterDimensions.html  struct.TextWrapStyle.html  struct.Theme.html  struct.TimeDelta.html  struct.Uniform.html  struct.ViewportAttachment.html  struct.ViewportHandle.html  struct.Visibility.html  struct.Visualizer.html  struct.WindowAttachment.html  (+1 more)
workflow_visualizer/color/: struct.Color.html
workflow_visualizer/coord/: struct.Coordinate.html  struct.InterfaceContext.html
workflow_visualizer/examples/: app.rs
workflow_visualizer/focus/: struct.Focus.html
workflow_visualizer/gfx/: struct.GfxOptions.html
workflow_visualizer/instance/: struct.AttributeWrite.html  struct.CpuAttributeBuffer.html
workflow_visualizer/job/: struct.Job.html
workflow_visualizer/render/: enum.RenderPhase.html
workflow_visualizer/src/: animate.rs  animation.rs  area.rs  bundling.rs  button.rs  clipboard.rs  color.rs  coord.rs  diagnostics.rs  disable.rs  engen.rs  focus.rs  gfx.rs  grid.rs  icon_scaling.rs  job.rs  layer.rs  layer_compositor.rs  lib.rs  list.rs  location.rs  media.rs  orientation.rs  panel.rs  path.rs  position.rs  render.rs  request.rs  runner.rs  scale_factor.rs  scene.rs  section.rs  snap_grid.rs  sync.rs  texture_atlas.rs  theme.rs  touch.rs  uniform.rs  view.rs  viewport.rs  (+5 more)
workflow_visualizer/theme/: struct.Theme.html  struct.ThemeDescriptor.html
workflow_visualizer/uniform/: struct.Uniform.html
workflow_visualizer/viewport/: struct.ViewportAttachment.html  struct.ViewportHandle.html
workflow_visualizer/visibility/: struct.VisibleSection.html
workflow_visualizer/window/: struct.WindowResize.html
workflow_visualizer/workflow/: trait.Workflow.html
(+1678 files in other folders)
