[package]
name = "android_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
app = {path = "../app"}
futures = "0.3.24"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]