[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.8.1"
winit = "0.27.2"
bytemuck = { version = "1.12.1", features = ["derive"] }
wgpu = {version = "0.13.1", features = ["webgl"]}
nalgebra = "0.31.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.24"