[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
r_engen = { path = "../r_engen" }
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.7.0", features = ["logger"] }
[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
