[package]
name = "application"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3"
surrealdb = { version = "1.0.0-beta.9" }
workflow_visualizer = { path = "../workflow_visualizer" }
gloo-worker = "0.2.1"
gloo-net = "0.2.6"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
[target.'cfg(target_os = "android")'.dependencies]
log = "0.4.17"
android_logger = "0.13.1"
[lib]
name = "application"
crate-type = ["cdylib"]
path = "src/main.rs"

