[package]
name = "engen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.9.1"
winit = "0.27.5"
bytemuck = { version = "1.12.3", features = ["derive"] }
wgpu = { version = "0.15.0", features = ["webgl", "trace"] }
nalgebra = "0.32.1"
fontdue = "0.7.2"
iter_tools = "0.1.4"
log = "0.4.17"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.25"
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.59", features = ["Window"] }
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"