[package]
name = "icon_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workflow_visualizer = { path = "../workflow_visualizer" }
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }