[package]
name = "mise_en_place_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mise_en_place = { path = "../mise_en_place" }
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }