[package]
name = "r_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
focal = { path = "../focal" }
futures = "0.3.24"
env_logger = "0.10.0"
winit = "0.27.2"
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.7.0", features = ["logger"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
[lib]
name = "r_app_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
