[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.27.2"
app = {path = "../app"}
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.59" , features = ["Window"]}
wasm-bindgen-futures = "0.4.32"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"

