[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.3.2" }
dioxus-router = "0.3.0"
dioxus-free-icons = { version = "0.6.0", features = ["hero-icons-solid", "feather", "bootstrap", "font-awesome-solid"] }
[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = { version = "0.3.1" }

[profile.release]
# Configure release to optimize for size
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"