[package]
name = "workflow_visualizer"
version = "0.1.0"
edition = "2021"
resolver = "2"



[dependencies]
winit = { version = "0.28.6", features = ["android-game-activity"]}
wgpu = { version = "0.16.0", features = ["webgl"] }
bevy_ecs = { version = "0.10.1" }
bytemuck = { version = "1.13.1", features = ["derive"] }
fontdue = "0.7.3"
nalgebra = { version = "0.32.2" }
serde = { version = "1.0.160", features = ["derive"] }
compact_str = "0.7.0"
tracing = "0.1.37"
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = [
    "Window",
    "Performance",
    "Screen",
    "ScreenOrientation",
] }
js-sys = "0.3.63"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.0", features = ["full"] }
pollster = "0.3.0"
