[package]
name = "workflow_visualizer"
version = "0.1.1"
edition = "2021"
resolver = "2"

[features]
diagnostics = []
[dev-dependencies]
serde_json = "1.0.103"
[dependencies]
winit = { version = "0.28.6", features = ["android-game-activity"]}
wgpu = { version = "0.17.0", features = ["webgl"] }
bevy_ecs = { version = "0.11.0" }
image = { version = "0.24.6" , features = ["png", "jpeg"]}
bytemuck = { version = "1.13.1", features = ["derive"] }
fontdue = "0.7.3"
gloo-worker = { version = "0.4.0", features = ["futures"] }
gloo-console = "0.3.0"
nalgebra = { version = "0.32.2" }
serde = { version = "1.0.160", features = ["derive"] }
compact_str = "0.7.0"
tracing = "0.1.37"
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = "0.2.86"
async-trait = "0.1.68"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.63", features = [
    "Window",
    "Performance",
    "Screen",
    "ScreenOrientation",
    "Clipboard",
] }
js-sys = "0.3.63"
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.28.0", features = ["full"] }
pollster = "0.3.0"
open = "5.0.0"
arboard = { version = "3.2.1"}
